# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: custom-check.yml
gendiff/: __init__.py
gendiff/engine/: difference.py  generate_diff.py  parser.py
gendiff/engine/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_plain_json.py
